--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -98,7 +98,7 @@
     }
 
     .upperbtn{
-        background-color: #0d57a0;
+        background-color: #4DB6AC;
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
@@ -126,7 +126,7 @@
 
 
     .upperbtn {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 5px 5px;
     margin: 8px 0;
@@ -175,7 +175,7 @@
 
 </style>
 
-<body style="background-color:#1aa8a8">
+<body style="background-color:lightcyan">
 <a name="top"></a>
 <div id="upperlevel">
         <div class="uppersection" id="homesection">
@@ -191,7 +191,7 @@
 
 
 <div class="left" style="width: 180px">
-    <h1 style="font-size:20px">Related articles</h1>
+    <h1 style="font-size:20px; color:#777;">Related articles</h1>
     <ul id="articleList" style="text-align: center;">
 
     </ul>
@@ -203,8 +203,8 @@
 <button id="editbtn" id="Edit" type="button" onclick="jumpToEdit()" style="float:right">Edit</button>
 <button id="postbtn" id="post" type="button" onclick="jumpToPost()" style="float:right">Post</button>
 
-<p id="description" style="color:white; margin-left:6.3cm"></p>
-    <h1 id="symptom" style="color:white;margin-left:6.3cm"> Symptoms</h1>
+<p id="description" style="color:#777; margin-left:6.3cm"></p>
+    <h1 id="symptom" style="color:#777;margin-left:6.3cm"> Symptoms</h1>
     <div style=" margin-left:6cm"><ul id="symptomList" style="color:#fefefe">
     </ul>
     </div>
