--- a/src/main/resources/static/articlePost.html
+++ b/src/main/resources/static/articlePost.html
@@ -24,11 +24,11 @@
 </head>
 <style>
     body {
-    background-color: #1aa8a8;
+    background-color: lightcyan;
     }
 
     button {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -44,7 +44,7 @@
 
     }
     .upperbtn {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 5px 5px;
     margin: 8px 0;
