--- a/src/main/resources/static/articleView.html
+++ b/src/main/resources/static/articleView.html
@@ -48,7 +48,7 @@
 
 
     .upperbtn {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 5px 5px;
     margin: 8px 0;
@@ -76,7 +76,7 @@
 
 </style>
 
-<body style="background-color:#1aa8a8">
+<body style="background-color:lightcyan">
 <a name="top"></a>
 <div id="upperlevel">
     <div class="uppersection" id="homesection">
