--- a/src/main/resources/static/authorityPage.html
+++ b/src/main/resources/static/authorityPage.html
@@ -50,7 +50,7 @@ $(document).ready(function(){
 
 <style>
     body {
-    background-color: #1aa8a8;
+    background-color: lightcyan;
     }
 
     .middle {
@@ -59,7 +59,7 @@ $(document).ready(function(){
     }
 
     form {
-    border: 3px solid #1aa8a8;
+    border: 3px solid lightcyan;
     margin:0 auto;
     vertical-align: middle;
     }
@@ -74,7 +74,7 @@ $(document).ready(function(){
     }
 
     button {
-        background-color: #0d57a0;
+        background-color: #4DB6AC;
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
@@ -99,7 +99,7 @@ $(document).ready(function(){
 <div class="middle">
     <form action="action_page.php">
         <div class="imgContainer">
-            <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
+            <img src="logo4.png" alt="logo" class="logo" style="width: 374px; height: 317px;">
         </div>
 
         <div class="container">
