--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -8,7 +8,7 @@
 
 <style>
     body {
-        background-color: #1aa8a8;
+        background-color: lightcyan;
     }
 
     .middle {
@@ -17,7 +17,7 @@
     }
 
     form {
-        border: 3px solid #1aa8a8;
+        border: 3px solid lightcyan;
         margin:0 auto;
         vertical-align: middle;
     }
@@ -32,7 +32,7 @@
     }
 
     button {
-        background-color: #0d57a0;
+        background-color: #4DB6AC;
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
@@ -77,7 +77,7 @@
     }
     #userbtn {
 
-        background-color: #0d57a0;
+        background-color: #4DB6AC;
         color: white;
         padding: 5px 5px;
         margin: 8px 0;
