--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="src/css/custombox.css">
+<link href="https://fonts.googleapis.com/css?family=Suez+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Amiko" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Suez+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300i" rel="stylesheet">
+
 <script src="src/js/custombox.js"></script>
 
 <body>
@@ -10,14 +16,14 @@
 <div class="mainPage" style="height: 100%">
 
     <div class="selected">
-        <h1>Selected</h1>
+        <h1 style="color: #777;font-family: 'Oswald', sans-serif;">Selected</h1>
         <ul id="selectedTags">
 
         </ul>
     </div>
 
     <div class="grids">
-        <h1 style="border-bottom: 4px solid #e3ae24;font-family:Arial,serif">AVAILABLE DEPARTMENTS</h1>
+        <h1 style="border-bottom: 4px solid #e3ae24;font-family: 'Amiko', sans-serif; color:#777">AVAILABLE DEPARTMENTS</h1>
         <ul class="department">
             <li><button id="btn1" type="submit" value="Dermatology">Dermatology</button></li>
             <li><button id="btn2" type="submit" value="Neurology">Neurology</button></li>
@@ -297,7 +303,7 @@ window.onload = function(){
 
 <style>
     button {
-        background-color: #0d57a0;
+        background-color: #4DB6AC;
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
@@ -307,7 +313,7 @@ window.onload = function(){
         width: 50%;
     }
     button:hover{
-        color: #42a5f5;
+        color: #CFD8DC;
         box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 20px 0 rgba(0,0,0,0.19);
         transition: box-shadow 1s,text-shadow 1s,color 1s;
 
@@ -322,7 +328,7 @@ window.onload = function(){
     }
 
     .upperbtn {
-        background-color: #0d57a0;
+        background-color: #4DB6AC;
         color: white;
         padding: 5px 5px;
         margin: 8px 0;
@@ -388,7 +394,7 @@ window.onload = function(){
     }
 
     body {
-        background-color: #1aa8a8;
+        background-color: lightcyan;
     }
 
     header ul li {
@@ -426,7 +432,7 @@ window.onload = function(){
     }
 
     li button {
-        background-color: #0d57a0;
+        background-color: #4DB6AC;
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
