--- a/src/main/resources/static/loginPage.html
+++ b/src/main/resources/static/loginPage.html
@@ -73,7 +73,7 @@ $(document).ready(function(){
 </script>
 <style>
     body {
-    background-color: #1aa8a8;
+    background-color: lightcyan;
     }
 
     .middle {
@@ -82,7 +82,7 @@ $(document).ready(function(){
     }
 
     form {
-    border: 3px solid #1aa8a8;
+    border: 3px solid lightcyan;
     margin:0 auto;
     vertical-align: middle;
     }
@@ -97,7 +97,7 @@ $(document).ready(function(){
     }
 
     button {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -159,7 +159,7 @@ $(document).ready(function(){
 
 
     .upperbtn {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 5px 5px;
     margin: 8px 0;
@@ -200,7 +200,7 @@ $(document).ready(function(){
 
     <form>
         <div class="imgContainer">
-            <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
+            <img src="logo4.png" alt="logo" class="logo" style="width: 374px; height: 317px;">
         </div>
 
         <div class="container">
