--- a/src/main/resources/static/modePage.html
+++ b/src/main/resources/static/modePage.html
@@ -11,7 +11,7 @@
 
 <style>
     body {
-        background-color: #1aa8a8;
+        background-color: lightcyan;
     }
 
     .middle {
@@ -20,7 +20,7 @@
     }
 
     form {
-        border: 3px solid #1aa8a8;
+        border: 3px solid lightcyan;
         margin:0 auto;
         vertical-align: middle;
     }
@@ -35,7 +35,7 @@
     }
 
     button {
-        background-color: #0d57a0;
+        background-color: #4DB6AC;
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
@@ -60,7 +60,7 @@
     }
 
     .upperbtn {
-        background-color: #0d57a0;
+        background-color: #4DB6AC;
         color: white;
         padding: 5px 5px;
         margin: 8px 0;
@@ -103,7 +103,7 @@
 
     <form action="action_page.php">
         <div class="imgContainer">
-            <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
+            <img src="logo4.png" alt="logo" class="logo" style="width: 374px; height: 317px;">
         </div>
 
         <div class="container">
@@ -112,7 +112,7 @@
             <button id="nearby" type="button">See facilities nearby</button>
         </div>
 
-        <div class="container" style="background-color:#1aa8a8">
+        <div class="container" style="background-color:lightcyan">
             <a href="/CreateDescriptionPage">Create a new disease</a>
         </div>
     </form>
