--- a/src/main/resources/static/nearbyPage.html
+++ b/src/main/resources/static/nearbyPage.html
@@ -26,7 +26,7 @@
         margin: auto;
         width: 100%;
         height: 350px;
-        background-color: #1aa8b9;
+        background-color: lightcyan;
     }
 
     .modal {
@@ -73,7 +73,7 @@
     }
 
     body {
-    background-color: #1aa8a8;
+    background-color: lightcyan;
     }
 
     .middle {
@@ -82,7 +82,7 @@
     }
 
     form {
-    border: 3px solid #1aa8a8;
+    border: 3px solid lightcyan;
     margin:0 auto;
     vertical-align: middle;
     }
@@ -97,7 +97,7 @@
     }
 
     button {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -123,7 +123,7 @@
 
 
     .upperbtn {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 5px 5px;
     margin: 8px 0;
@@ -166,7 +166,7 @@
 
     <form action="action_page.php">
         <div class="imgContainer">
-            <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
+            <img src="logo4.png" alt="logo" class="logo" style="width: 374px; height: 317px;">
         </div>
 
         <div class="container">
@@ -174,7 +174,7 @@
             <button id="pharmacynearby" type="button">Pharmacy nearby</button>
         </div>
 
-        <div class="container" style="background-color:#1aa8a8">
+        <div class="container" style="background-color:lightcyan">
             <a href="#">skip?</a>
         </div>
     </form>
