--- a/src/main/resources/static/searchPage.html
+++ b/src/main/resources/static/searchPage.html
@@ -66,7 +66,7 @@
     }
 
     body {
-    background-color: #1aa8a8;
+    background-color: lightcyan;
     }
 
     .middle {
@@ -87,7 +87,7 @@
     }
 
     .upperbtn {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 5px 5px;
     margin: 8px 0;
@@ -128,7 +128,7 @@
     }
 
     #diseaseList li button {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     border: 1px groove #cccccc;
     border-radius: 5px;
@@ -165,7 +165,7 @@
 <div class="middle">
 
     <div class="imgContainer">
-        <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
+        <img src="logo4.png" alt="logo" class="logo" style="width: 374px; height: 317px;">
     </div>
 
     <div class="container">
