--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -289,7 +289,7 @@
     </button>
 
     <div id = "imgcontainer">
-        <img class="logo" src="canvas.png" alt="logo"  style="
+        <img class="logo" src="logo4.png" alt="logo"  style="
         width: 240px;
         height: 200px;
         ">
