--- a/src/main/resources/static/changeEmail.html
+++ b/src/main/resources/static/changeEmail.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body style="background-color: #1aa8b9">
+<body style="background-color: lightcyan">
 <form onsubmit="return validate_form(this);" >
   <div style="margin-top: 200px" ><center><div style="color: #fefefe">Email: <input id="11" type="text" name="email" size="30" placeholder="Enter New Email Address">
       <button id="submit" onclick="validate_email()" type="button">Change!</button>
