--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -92,7 +92,7 @@
     }
 
     body {
-    background-color: #1aa8a8;
+    background-color: lightcyan;
     }
 
     .mytextarea, .mce-container-body, #code_ifr {
@@ -108,7 +108,7 @@
     }
 
     button {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -124,7 +124,7 @@
 
     }
     .upperbtn {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 5px 5px;
     margin: 8px 0;
