--- a/src/main/resources/static/editDescriptionPage.html
+++ b/src/main/resources/static/editDescriptionPage.html
@@ -24,7 +24,7 @@
 </head>
 <style>
     body {
-    background-color: #1aa8a8;
+    background-color: lightcyan;
     }
 
     input[type=text], input[type=password] {
@@ -37,7 +37,7 @@
     }
 
     button {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -53,7 +53,7 @@
 
     }
     .upperbtn {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 5px 5px;
     margin: 8px 0;
