--- a/src/main/resources/static/signupPage.html
+++ b/src/main/resources/static/signupPage.html
@@ -62,7 +62,7 @@
 </script>
 <style>
     body {
-        background-color: #1aa8a8;
+        background-color: lightcyan;
     }
 
     .middle {
@@ -71,7 +71,7 @@
     }
 
     form {
-        border: 3px solid #1aa8a8;
+        border: 3px solid lightcyan;
         margin:0 auto;
         vertical-align: middle;
     }
@@ -86,7 +86,7 @@
     }
 
     button {
-        background-color: #0d57a0;
+        background-color: #4DB6AC;
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
@@ -143,7 +143,7 @@
 
 
     .upperbtn {
-    background-color: #0d57a0;
+    background-color: #4DB6AC;
     color: white;
     padding: 5px 5px;
     margin: 8px 0;
@@ -184,7 +184,7 @@
 <div class="middle">
     <form>
         <div class="imgContainer">
-            <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
+            <img src="logo4.png" alt="logo" class="logo" style="width: 374px; height: 317px;">
         </div>
 
         <div class="container">
