change password and email is now modal

--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -269,7 +269,7 @@
         <div class="input-group" style="margin-bottom: 5px;">
             <select class="selectpicker show-tick" id="depList1">
                 <option>Dermatology</option>
-                <option>Neurologyn</option>
+                <option>Neurology</option>
                 <option>Osteology</option>
                 <option>Ophthalmology</option>
                 <option>Psychiatry</option>
@@ -315,7 +315,7 @@
 
             <select class="selectpicker show-tick" id="depList">
                 <option>Dermatology</option>
-                <option>Neurologyn</option>
+                <option>Neurology</option>
                 <option>Osteology</option>
                 <option>Ophthalmology</option>
                 <option>Psychiatry</option>
