--- a/src/main/resources/static/authorityPage.html
+++ b/src/main/resources/static/authorityPage.html
@@ -78,8 +78,8 @@ $(document).ready(function(){
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
-        border: 1px groove #cccccc;
-        border-radius: 5px;
+        border: none;
+        border-radius: 4px;
         cursor: pointer;
         width: 50%;
     }
