--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -108,14 +108,14 @@
     }
 
     button {
-    background-color: #4DB6AC;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-        border: 1px groove #cccccc;
-        border-radius: 5px;
-    cursor: pointer;
-    width: 50%;
+        background-color: #4DB6AC;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        width: 50%;
     }
     button:hover{
         color: #42a5f5;
@@ -184,7 +184,7 @@
 
     .checkBoxArea input[type="checkbox"]:empty ~ label:before {
         position: absolute;
-        display: in-block;
+        display: inline-block;
         top: 0;
         bottom: 0;
         left: 0;
