--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -47,21 +47,20 @@
     }
 
     body {
-    background-color: lightcyan;
-    margin: 0 auto;
+        background-color: lightcyan;
+        margin: 0 auto;
     }
     .upperbtn {
-    background-color: #4DB6AC;
-    border-radius: 5px;
-    color: white;
-    float:left;
-    width: 120px;
-    height: 30px;
-    padding:
-    5px 5px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
+        background-color: #4DB6AC;
+        border-radius: 4px;
+        color: white;
+        float:left;
+        width: 120px;
+        height: 30px;
+        padding: 5px 5px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
     }
     .upperbtn:hover{
     color: #42a5f5;
