--- a/src/main/resources/static/editDescriptionPage.html
+++ b/src/main/resources/static/editDescriptionPage.html
@@ -37,14 +37,14 @@
     }
 
     button {
-    background-color: #4DB6AC;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-        border: 1px groove #cccccc;
-        border-radius: 5px;
-    cursor: pointer;
-    width: 50%;
+        background-color: #4DB6AC;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        width: 50%;
     }
     button:hover{
         color: #42a5f5;
@@ -79,9 +79,10 @@
     }
 
     #titleEle {
-    font-size: 28px;
-    left:218px; top:60px; right:0; bottom:0;
-    color: #fefefe;
+        text-align: center;
+        font-size: 40px;
+        left:218px; top:60px; right:0; bottom:0;
+        color: #777;
     }
 
 </style>
