--- a/src/main/resources/static/loginPage.html
+++ b/src/main/resources/static/loginPage.html
@@ -76,38 +76,38 @@ $(document).ready(function(){
 </script>
 <style>
     body {
-    background-color: lightcyan;
+        background-color: lightcyan;
     }
 
     .middle {
-    text-align: center;
-    margin-top: 100px;
+        text-align: center;
+        margin-top: 100px;
     }
 
     form {
-    border: 3px solid lightcyan;
-    margin:0 auto;
-    vertical-align: middle;
+        border: 3px solid lightcyan;
+        margin:0 auto;
+        vertical-align: middle;
     }
 
     input[type=text], input[type=password] {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+        width: 50%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
     }
 
     button {
-    background-color: #4DB6AC;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-        border: 1px groove #cccccc;
-        border-radius: 5px;
-    cursor: pointer;
-    width: 50%;
+        background-color: #4DB6AC;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        width: 50%;
     }
     button:hover{
         color: #42a5f5;
