--- a/src/main/resources/static/nearbyPage.html
+++ b/src/main/resources/static/nearbyPage.html
@@ -97,14 +97,14 @@
     }
 
     button {
-    background-color: #4DB6AC;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-        border: 1px groove #cccccc;
-        border-radius: 5px;
-    cursor: pointer;
-    width: 50%;
+        background-color: #4DB6AC;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        width: 50%;
     }
     button:hover{
         color: #42a5f5;
