responsive div modified

--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -284,6 +284,10 @@
     .lines{
     border-top: 1px #9E9E9E solid;
     }
+
+    @media only screen and (max-width: 479px){
+    div { width: 90%; }
+    }
 </style>
 
 <body>
@@ -349,11 +353,11 @@
 
 
 
-        <button type="button" class="btn btn-default btn-lg" id ="changeBtn1">
+        <button type="button" class="btn btn-default btn-lg" id ="changeBtn1" style="font-size: 14px">
             <span class="glyphicon glyphicon-lock"></span> Change your password
         </button>
 
-        <button type="button" class="btn btn-default btn-lg" id = "changeBtn2">
+        <button type="button" class="btn btn-default btn-lg" id = "changeBtn2" style="font-size: 14px">
             <span class="glyphicon glyphicon-envelope"></span> Change your Email
         </button>
 
