--- a/src/main/resources/static/loginPage.html
+++ b/src/main/resources/static/loginPage.html
@@ -110,7 +110,7 @@ $(document).ready(function(){
         width: 50%;
     }
     button:hover{
-        color: #42a5f5;
+        color: #CFD8DC;
         box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 20px 0 rgba(0,0,0,0.19);
         transition: box-shadow 1s,text-shadow 1s,color 1s;
 
@@ -146,7 +146,7 @@ $(document).ready(function(){
     width: 80%;
     }
     button:hover{
-        color: #42a5f5;
+        color: #CFD8DC;
         box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 20px 0 rgba(0,0,0,0.19);
         transition: box-shadow 1s,text-shadow 1s,color 1s;
 
