--- a/src/main/resources/static/searchPage.html
+++ b/src/main/resources/static/searchPage.html
@@ -68,7 +68,7 @@
 
 
     button:hover{
-    color: #42a5f5;
+    color: #CFD8DC;
     transition: text-shadow 1s,color 1s;
 
     }
@@ -124,7 +124,7 @@
     }
 
     #diseaseList li button:hover{
-    color: #42a5f5;
+    color: #CFD8DC;
     transition: text-shadow 1s,color 1s;
     }
 
