--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -43,7 +43,7 @@
     }
 
     button:hover{
-        color: #42a5f5;
+        color: #CFD8DC;
         box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 20px 0 rgba(0,0,0,0.19);
         transition: box-shadow 1s,text-shadow 1s,color 1s;
 
@@ -87,7 +87,7 @@
 
     }
     #userbtn:hover{
-        color: #42a5f5;
+        color: #CFD8DC;
         box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 20px 0 rgba(0,0,0,0.19);
         transition: box-shadow 1s,text-shadow 1s,color 1s;
 
