--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -195,13 +195,17 @@
     <ul id="articleList" style="text-align: center;">
 
     </ul>
+    <button class="upperbtn" type="button" id="postbtn" onclick="jumpToPost()">
+        <span class="glyphicon glyphicon-file"></span> Post
+    </button>
 </div>
 
 <div>
 <h1 id="title" style="color:white"></h1>
 
-<button id="editbtn" id="Edit" type="button" onclick="jumpToEdit()" style="float:right">Edit</button>
-<button id="postbtn" id="post" type="button" onclick="jumpToPost()" style="float:right">Post</button>
+<button class="upperbtn" type="button" id="editbtn" onclick="jumpToEdit()" style="width: 100px">
+    <span class="glyphicon glyphicon-pencil"></span> Edit
+</button>
 
 <p id="description" style="color:#777; margin-left:6.3cm"></p>
     <h1 id="symptom" style="color:#777;margin-left:6.3cm"> Symptoms</h1>
@@ -226,13 +230,13 @@
         </div>
     </div>
 
-<div class="share">
+<!--<div class="share">-->
 
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
+    <!--<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
+    <!--<a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>-->
 
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&mobile_iframe=true&width=64&height=28&appId" width="64" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-</div>
+    <!--<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&mobile_iframe=true&width=64&height=28&appId" width="64" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>-->
+<!--</div>-->
 
 <div class="footer">
     <a href="#top" id="back-top"><span class="glyphicon glyphicon-eject"></span></a>
