--- a/src/main/resources/static/articlePost.html
+++ b/src/main/resources/static/articlePost.html
@@ -211,7 +211,26 @@ function submitChange() {
                 alert("Fail! Disease already existed!");
             } else {
                 alert("Success! You have created a new disease!");
-                window.location.replace('/ModePage');
+
+                 var tagText = obj.name;
+                console.log(title);
+                 $(function(callback) {
+                $.ajax({
+                    url : '/getDisease',
+                    type : 'POST',
+                    data : JSON.stringify(tagText),
+                    contentType: "application/json; charset=utf-8",
+                    success : function(data) {
+                        callback(data);
+                        console.log("success");
+                    },
+                    error : function (error) {
+                        console.log(error);
+                    }
+                });
+            });
+            window.location.replace('/diseaseDescriptionPage');
+
             }
         });
     });
