--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -540,10 +540,31 @@ function submitChange() {
                 alert("Fail! Duplicate symptoms detected");
             } else {
                 alert("Success! You have created a new disease!");
-                window.location.replace('/ModePage');
+                var tagText = title;
+            console.log(title);
+            $(function(callback) {
+                $.ajax({
+                    url : '/getDisease',
+                    type : 'POST',
+                    data : JSON.stringify(tagText),
+                    contentType: "application/json; charset=utf-8",
+                    success : function(data) {
+                        callback(data);
+                        console.log("success");
+                    },
+                    error : function (error) {
+                        console.log(error);
+                    }
+                });
+            });
+            window.location.replace('/diseaseDescriptionPage');
+
             }
         });
     });
+
+
+
 }
 
 $(document).ready(function(){
