--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -437,7 +437,7 @@ window.onload = function(){
         position: absolute;
         top:20%;
         bottom: 10%;
-        left: 11.5%;
+        left: 10em;
         border-left:4px solid silver;
     }
 
